fix(layout/default): fix extra space after header

--- a/_stylesheets/_base.css
+++ b/_stylesheets/_base.css
@@ -126,3 +126,7 @@ a {
     color: var(--color-link);
   }
 }
+
+.main {
+  margin-top: 0;
+}
